<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/back"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".ui.detail.DetailUserActivity"
            android:visibility="gone"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                >

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/favorite_button"
                    style="@style/Widget.MaterialComponents.Button.Icon"
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:layout_marginStart="16dp"
                    android:backgroundTint="@color/grey"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    app:icon="@drawable/baseline_favorite_24"
                    app:iconPadding="0dp"
                    app:iconSize="30dp"
                    app:iconTint="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Rounded"
                    app:strokeColor="@color/old_grey"
                    app:strokeWidth="1dp" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:contentDescription="@string/profile_user"
                    android:src="@drawable/ic_launcher_background"
                    app:civ_border_color="@color/black"
                    app:civ_border_width="0.5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/shareButton"
                    app:layout_constraintStart_toEndOf="@+id/favorite_button"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/shareButton"
                    style="@style/Widget.MaterialComponents.Button.Icon"
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/grey"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    app:icon="@drawable/baseline_share_24"
                    app:iconPadding="0dp"
                    app:iconSize="30dp"
                    app:iconTint="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Rounded"
                    app:strokeColor="@color/old_grey"
                    app:strokeWidth="1dp" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:id="@+id/userDetail"
                >
                <TextView
                    android:id="@+id/textViewName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textStyle="bold"
                    android:textSize="28sp"
                    />
                <TextView
                    android:id="@+id/textViewUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textSize="18sp"
                    />
                <TextView
                    android:id="@+id/textViewDescription"
                    android:layout_width="250dp"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="18sp"
                    />
            </LinearLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/background"
                android:layout_marginTop="10dp"
                app:tabIndicatorColor="?attr/tabIndicatorColor"
                app:tabSelectedTextColor="?attr/tabSelectedTextColor"
                app:tabTextColor="?attr/tabTextColor"
                />
            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteY="107dp"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
