...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/back"
    tools:context=".ui.MainActivity">

    <com.google.android.material.search.SearchBar
        android:id="@+id/searchBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        style="@style/searchbar"
        app:titleTextColor="?attr/tabIndicatorColor"
...
